# telegram_django_bot

./: .gitignore  LICENSE  MANIFEST.in  README.rst  bot_start.py  requirements.txt  setup.cfg
.github/workflows/: run_tests.yml
examples/website_with_polling_bot/: .env.example  .gitignore  Dockerfile  common.yml  docker-compose.yml  docker-entrypoint.sh  flowerconfig.py  manage.py  readme.md  requirements.txt
examples/website_with_polling_bot/base/: __init__.py  admin.py  apps.py  forms.py  models.py  utrls.py  views.py
examples/website_with_polling_bot/base/migrations/: 0001_initial.py
examples/website_with_polling_bot/bot_conf/: celery.py  settings.py  urls.py  utrls.py  wsgi.py
examples/website_with_polling_bot/configs/commands/: admin.sh  celery_beat.sh  celery_main.sh  flower.sh  master_bot.sh
examples/website_with_polling_bot/configs/confs/: uwsgi.ini
examples/website_with_polling_bot/configs/confs/nginx/: dj.conf  (+2 more)
telegram_django_bot/: __init__.py  _test_helper.py  admin.py  admin_utils.py  apps.py  forms.py  models.py  permissions.py  routing.py  tasks.py  td_viewset.py  telega_base_buttons.py  telegram_lib_redefinition.py  test.py  tg_dj_bot.py  user_viewset.py  utils.py
telegram_django_bot/locale/ru/LC_MESSAGES/: django.mo  django.po
telegram_django_bot/migrations/: 0001_initial.py  0002_delete_user.py  0003_botmenuelem_message_format.py  0004_auto_20220915_0448.py  0005_auto_20221010_1330.py  0006_auto_20221023_0157.py  0007_auto_20221202_0305.py  0008_auto_20221225_1050.py
telegram_django_bot/templates/: dropdown_filter1.html
tests/: .env.example  app_settings.py  async_bot_start.py  bot_start.py  manage.py  requirements.txt  settings.py  test_bme.py  test_routing.py  test_td_bot.py  test_user.py  test_utils.py  test_viewset.py  urls.py
tests/myapp/: apps.py  forms.py  handlers.py  models.py  utrls.py  views.py
tests/myapp/migrations/: 0001_initial.py  0002_auto_20220718_1756.py  0003_auto_20220726_0213.py  0004_auto_20220818_1525.py  0005_auto_20220914_1658.py  0006_order_entities.py  0007_auto_20221004_0533.py  0008_auto_20221202_0305.py
tests/test_app/: admin.py  apps.py  forms.py  handlers.py  models.py  permissions.py  utrls.py  views.py
tests/test_app/migrations/: 0001_initial.py
(+8 files in other folders)
