[metadata]
name = telegram_django_bot
version = 0.0.9
description = Telegram Django Bot Bridge
long_description = file: README.rst
url = https://github.com/alexanderaleskin/telegram_django_bot_bridge
author = Alexander Aleskin
author_email = alexanderaleskin@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Communications :: Chat
    Topic :: Internet

[options]
include_package_data = true
packages = telegram_django_bot
python_requires = >=3.8
install_requires =
    Django >= 3.0
    python-telegram-bot>=13.14
